[gd_scene load_steps=3 format=3 uid="uid://btkquw2i7l1ty"]

[ext_resource type="Script" uid="uid://dctbel5rwq6su" path="res://scenes/common/popups/new_tag_dialog.gd" id="1_nbcli"]

[sub_resource type="LabelSettings" id="LabelSettings_8bxcg"]
font_color = Color(0.794399, 3.22476e-06, 9.62615e-07, 1)

[node name="NewTagDialog" type="ConfirmationDialog"]
title = "New tag"
initial_position = 2
size = Vector2i(360, 134)
visible = true
popup_window = true
force_native = true
script = ExtResource("1_nbcli")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 356.0
offset_bottom = 92.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ErrorLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Tag with this name already exists"
label_settings = SubResource("LabelSettings_8bxcg")
horizontal_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/BoxContainer"]
layout_mode = 2
text = "Tag name:"

[node name="TagEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "enter tag name.."
emoji_menu_enabled = false
clear_button_enabled = true

[node name="BoxContainer2" type="BoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/BoxContainer2"]
layout_mode = 2
text = "Tag color:"

[node name="ColorPicker" type="ColorPickerButton" parent="MarginContainer/VBoxContainer/BoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
edit_alpha = false
